--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src='https://8x8.vc/vpaas-magic-cookie-e2864be2444d469b90e29f891a0f4a62/external_api.js' async></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
