--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DT Meet</title>
     <script src='https://8x8.vc/vpaas-magic-cookie-e2864be2444d469b90e29f891a0f4a62/external_api.js' async></script>
 
   </head>
