update jitsi domain

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>DT Meet</title>
-    <script src='https://8x8.vc/vpaas-magic-cookie-e2864be2444d469b90e29f891a0f4a62/external_api.js' async></script>
+<!--    <script src='https://8x8.vc/vpaas-magic-cookie-e2864be2444d469b90e29f891a0f4a62/external_api.js' async></script>-->
+    <script src='https://jitsi.hamburg.ccc.de/external_api.js'></script>
+
 
   </head>
   <body>
